src/tests/fixtures/field_values/DuplicateFields.ts.expected
-----------------
INPUT
----------------- 
// @ts-nocheck

/** @gqlType */
export default class SomeType {
  /** @gqlField */
  hello(): string {
    return "Hello world!";
  }
  /** @gqlField */
  hello(): Array<string> {
    return ["Hello world!"];
  }
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/field_values/DuplicateFields.ts:6:3 - error: Field "SomeType.hello" can only be defined once.

6   hello(): string {
    ~~~~~

  src/tests/fixtures/field_values/DuplicateFields.ts:10:3
    10   hello(): Array<string> {
         ~~~~~
    Related location
